[project]
name = "tg-searcher"
version = "0.5.0"
description = "Telegram searcher bot for Chinese"
readme = "README.md"
authors = [
    {name = "SharzyL", email = "me@sharzy.in"},
]
dependencies = [
    "Telethon<2.0.0,>=1.41.0",
    "python-socks>=2.7.2",
    "cryptg>=0.5.2",
    "async-timeout>=5.0.1",
    "jieba>=0.42.1",
    "pyyaml>=6.0.3",
    "redis<7.0.0,>=6.2.0",
    "whoosh>=2.7.4",
]
requires-python = "<4.0,>=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities"
]

[project.urls]
changelog = "https://github.com/SharzyL/tg_searcher/blob/master/CHANGELOG.md"
homepage = "https://github.com/SharzyL/tg_searcher"
repository = "https://github.com/SharzyL/tg_searcher.git"

[project.scripts]
tg-searcher = "tg_searcher:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
